# Phong-lighting-model

./: CMakeLists.txt  README.md
.obsidian/: workspace.json
glad/include/glad/: glad.h
glad/src/: glad.c
res/shaders/: Fragment.shader  LightFragment.shader  LightVertex.shader  Vertex.shader
src/: .gitignore  CMakeLists.txt  Camera.h  Ibo.cpp  Ibo.h  Makefile  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Vao.cpp  Vao.h  Vbo.cpp  Vbo.h  VertexBufferLayout.cpp  VertexBufferLayout.h  test  test.cpp
